# naoqi_bringup2_SinfonIA

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  sinfonia.repos
config/: naoqi_driver_nao.yaml  naoqi_driver_pepper.yaml
launch/: naoqi_full_bringup.launch.py  naoqi_pepper_bringup.launch.py
scripts/: naoqi_capabilities_demo.py
