<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>naoqi_bringup2_sinfonIA</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="d.cuevas@uniandes.edu.co">robotica</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>naoqi_driver</exec_depend>
  <exec_depend>naoqi_manipulation</exec_depend>
  <exec_depend>naoqi_miscellaneous</exec_depend>
  <exec_depend>naoqi_navigation</exec_depend>
  <exec_depend>naoqi_perception</exec_depend>
  <exec_depend>naoqi_speech</exec_depend>
  <exec_depend>naoqi_interface</exec_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>naoqi_bridge_msgs</exec_depend>
  <exec_depend>naoqi_utilities_msgs</exec_depend>
  <exec_depend>audio_common_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
